# libnih

./: .gitignore  CMakeLists.txt
nih/: signal.c
